--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 	  </div>
     </section>
 
-
+<!-- 
 	<section class="ftco-section" id="project-section">
 		<div class="container">
 		  <div class="row justify-content-center mb-5 pb-5">
@@ -536,7 +536,7 @@
 		  </div>
 	  
 		  <!-- added justify-content-center to center align the last two projects -->
-		  <br>
+<!-- 		  <br>
 		  <div class="row d-flex justify-content-center">  
 			<div class="col-md-4 justify-content-center">
 				<div class="blog-entry justify-content-end">
@@ -550,10 +550,10 @@
 			  </div>
 			</div>
 		 </div>
-		  
-		  
+		   -->
+<!-- 		  
 		</div>
-	  </section>
+	  </section> --> -->
 
 	<section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
       <div class="container">
