--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
 </script>
 <script defer src="/_vercel/insights/script.js"></script>
 
+	  <script>
+  window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/speed-insights/script.js"></script>
+
 
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
