--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
 			            <h2>A Final Year Student</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
-			            <p><a href="https://www.linkedin.com/in/imsaurav1/" class="btn btn-primary py-3 px-4">LinkedIn</a> 
-							<a href="https://github.com/Imsaurav1" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <p><a href="https://www.linkedin.com/in/imsaurav1/" target="_blank" class="btn btn-primary py-3 px-4">LinkedIn</a> 
+							<a href="https://github.com/Imsaurav1" target="_blank" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -308,7 +308,7 @@
 									<span class="number" data-number="10">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
-								<p><a href="https://www.linkedin.com/in/imsaurav1/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
+								<p><a href="https://www.linkedin.com/in/imsaurav1/" target="_blank" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
 							</div>
 						</div>
 					</div>
@@ -337,7 +337,7 @@
 
 		<div class="row justify-content-center mt-5">
 			<div class="col-md-6 text-center ftco-animate">
-				<p><a href="https://drive.google.com/drive/folders/18CaW9TV41PNWUDXl71rtJxrBoOrwcIRD?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
+				<p><a href="https://drive.google.com/drive/folders/18CaW9TV41PNWUDXl71rtJxrBoOrwcIRD?usp=sharing" target="_blank" class="btn btn-primary py-4 px-5">Download CV</a></p>
 			</div>
 		</div>
 		
