--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/Imsaurav1/digital-clock-using-vivado-and-fpga">Digital Clock Using FPGA Board.</a></h3>
+                <h3 class="heading"><a href="https://github.com/Imsaurav1/digital-clock-using-vivado-and-fpga" target="_blank" ></a>Digital Clock Using FPGA Board.</a></h3>
                 <p>I engineered a clock on an FPGA board, showcasing seconds and minutes on the seven-segment display. After 60
 					seconds, the display initiates a blinking effect for enhanced visibility</p>
               </div>
@@ -609,7 +609,7 @@
 						<h2>More projects on<span> Github  </span> </h2>
 						<div class="heading"> <h4> I love to solve Coding Problems &amp; uncover hidden data stories </h4>
 						<br>
-						<p><a href="https://github.com/Imsaurav1" class="btn btn-primary py-3 px-5">GitHub</a></p>
+						<p><a href="https://github.com/Imsaurav1" target="_blank" class="btn btn-primary py-3 px-5">GitHub</a></p>
 						</div>
 					</div>
 				</div>
@@ -663,7 +663,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/drive/folders/18CaW9TV41PNWUDXl71rtJxrBoOrwcIRD?usp=sharing">resumelink</a></p>
+	            <p><a href="https://drive.google.com/drive/folders/18CaW9TV41PNWUDXl71rtJxrBoOrwcIRD?usp=sharing" target="_blank" >resumelink</a></p>
 	          </div>
           </div>
 
@@ -678,12 +678,12 @@
 				<br>
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
 					  <li class="ftco-animate normal-txt">Find me on  </li>
-					  <li class="ftco-animate"><a href="https://www.youtube.com/@saurabh_jha_nituk"><span class="icon-youtube"></span></a></li>
-					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/imsaurav1/"><span class="icon-linkedin"></span></a></li>  
-					  <li class="ftco-animate"><a href="https://x.com/I_m_saurav____"><span class="icon-twitter"></span></a></li>
-					  <li class="ftco-animate"><a href="https://www.facebook.com/thesauravking/"><span class="icon-facebook"></span></a></li>
-				      <li class="ftco-animate"><a href="https://www.instagram.com/i_m_saurav____/"><span class="icon-instagram"></span></a></li>
-					  <li class="ftco-animate"><a href="https://t.me/sauravjha1234"><span class="icon-telegram"></span></a></li>
+					  <li class="ftco-animate"><a href="https://www.youtube.com/@saurabh_jha_nituk" target="_blank" ><span class="icon-youtube"></span></a></li>
+					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/imsaurav1/" target="_blank" ><span class="icon-linkedin"></span></a></li>  
+					  <li class="ftco-animate"><a href="https://x.com/I_m_saurav____" target="_blank" ><span class="icon-twitter"></span></a></li>
+					  <li class="ftco-animate"><a href="https://www.facebook.com/thesauravking/" target="_blank" ><span class="icon-facebook"></span></a></li>
+				      <li class="ftco-animate"><a href="https://www.instagram.com/i_m_saurav____/" target="_blank" ><span class="icon-instagram"></span></a></li>
+					  <li class="ftco-animate"><a href="https://t.me/sauravjha1234" target="_blank" ><span class="icon-telegram"></span></a></li>
 					</ul>
 				<br>
 		   </div>
