--- a/index.html
+++ b/index.html
@@ -497,72 +497,66 @@
 	  </div>
     </section>
 
-<!-- 
-	<section class="ftco-section" id="project-section">
-		<div class="container">
-		  <div class="row justify-content-center mb-5 pb-5">
-			<div class="col-md-7 heading-section text-center ftco-animate">
-			  <h1 class="big big-2">Profile</h1>
-			  <h2 class="mb-4">Profile</h2>
-			  <p>Below are the Link of My Coading Profile and Social Profile</p>
-			</div>
-		  </div>
-		  <div class="row d-flex">
-			<div class="col-md-4 justify-content-center">
-				<div class="blog-entry justify-content-end">
-				<a href="https://leetcode.com/u/system-exit/" class="block-20 zoom-effect" style="background-image: url('images/1702630058987.jpeg');">
-				</a>
-				<div class="text mt-3 float-right d-block">
-  
-				  <h3 class="heading"><a href="https://leetcode.com/u/system-exit/">LEET CODE</a></h3>
-				  <p>1566 Is The Higest Rating,  More Then 450 Question Solved</p>
-				</div>
-			  </div>
-			</div>
-			<div class="col-md-4 justify-content-center">
-				<div class="blog-entry justify-content-end">
-				<a href="https://www.geeksforgeeks.org/user/jack_sparrow_8/" class="block-20 zoom-effect" style="background-image: url('images/1280px-GeeksforGeeks.svg.png');">
-				</a>
-				<div class="text mt-3 float-right d-block">
-  
-				  <h3 class="heading"><a href="https://www.geeksforgeeks.org/user/jack_sparrow_8/">GeeksForGeeks</a></h3>
-				  <p>I Have Solved more than 500+ Question.</p>
-				</div>
-			  </div>
-			</div>
-			<div class="col-md-4 justify-content-center">
-				<div class="blog-entry">
-				<a href="hhttps://www.codechef.com/users/jack_sparrow_8" class="block-20 zoom-effect" style="background-image: url('images/1694597042536.jpeg');">
-				</a>
-				<div class="text mt-3 float-right d-block">
-  
-				  <h3 class="heading"><a href="https://www.codechef.com/users/jack_sparrow_8">CODE CHEF</a></h3>
-				  <p>3 Star on Code Chef Profile. </p>
-				</div>
-			  </div>
-			</div>
-			
-		  </div>
-	  
-		  <!-- added justify-content-center to center align the last two projects -->
-<!-- 		  <br>
-		  <div class="row d-flex justify-content-center">  
-			<div class="col-md-4 justify-content-center">
-				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/Imsaurav1" class="block-20 zoom-effect" style="background-image: url('images/GitHub-Mark-ea2971cee799.png');">
-				</a>
-				<div class="text mt-3 float-right d-block">
-  
-				  <h3 class="heading"><a href="https://github.com/Imsaurav1">GitHub</a></h3>
-				  <p>More Than 10 projects on GIT HUB.</p>
-				</div>
-			  </div>
-			</div>
-		 </div>
-		   -->
-<!-- 		  
-		</div>
-	  </section> --> -->
+<section class="ftco-section" id="project-section">
+  <div class="container">
+    <div class="row justify-content-center mb-5 pb-5">
+      <div class="col-md-7 heading-section text-center ftco-animate">
+        <h1 class="big big-2">Profile</h1>
+        <h2 class="mb-4">Profile</h2>
+        <p>Below are the Links to My Coding Profile and Social Profile</p>
+      </div>
+    </div>
+    <div class="row d-flex">
+      <div class="col-md-4 justify-content-center">
+        <div class="blog-entry justify-content-end">
+          <a href="https://leetcode.com/u/system-exit/" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/1702630058987.jpeg');">
+          </a>
+          <div class="text mt-3 float-right d-block">
+            <h3 class="heading"><a href="https://leetcode.com/u/system-exit/" target="_blank">LEET CODE</a></h3>
+            <p>1566 Is The Highest Rating, More Than 450 Questions Solved</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 justify-content-center">
+        <div class="blog-entry justify-content-end">
+          <a href="https://www.geeksforgeeks.org/user/jack_sparrow_8/" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/1280px-GeeksforGeeks.svg.png');">
+          </a>
+          <div class="text mt-3 float-right d-block">
+            <h3 class="heading"><a href="https://www.geeksforgeeks.org/user/jack_sparrow_8/" target="_blank">GeeksForGeeks</a></h3>
+            <p>I Have Solved more than 500+ Questions.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 justify-content-center">
+        <div class="blog-entry">
+          <a href="https://www.codechef.com/users/jack_sparrow_8" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/1694597042536.jpeg');">
+          </a>
+          <div class="text mt-3 float-right d-block">
+            <h3 class="heading"><a href="https://www.codechef.com/users/jack_sparrow_8" target="_blank">CODE CHEF</a></h3>
+            <p>3 Star on Code Chef Profile.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+<!-- Commented out section for GitHub link 
+    <div class="row d-flex justify-content-center">
+      <div class="col-md-4 justify-content-center">
+        <div class="blog-entry justify-content-end">
+          <a href="https://github.com/Imsaurav1" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/GitHub-Mark-ea2971cee799.png');">
+          </a>
+          <div class="text mt-3 float-right d-block">
+            <h3 class="heading"><a href="https://github.com/Imsaurav1" target="_blank">GitHub</a></h3>
+            <p>More Than 10 projects on GIT HUB.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+-->
+  </div>
+</section>
+
+	
 
 	<section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
       <div class="container">
