--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 	          <li class="nav-item"><a href="#project-section" class="nav-link"><span>Projects</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
+			<li class="nav-item"><a href="/Games.html" class="nav-link"><span>Games</span></a></li>
 	        </ul>
 	      </div>
 	    </div>
