--- a/Games.html
+++ b/Games.html
@@ -127,7 +127,7 @@
                 <ul class="navbar-nav nav ml-auto">
     
                   <li class="nav-item"><a href="index.html#home-section" class="nav-link"><span>Home</span></a></li>
-                  <li class="nav-item"><a href="/index.html/#about-section" class="nav-link"><span>About</span></a></li>
+                  <li class="nav-item"><a href="/index.html#about-section" class="nav-link"><span>About</span></a></li>
                   <li class="nav-item"><a href="/index.html/#resume-section" class="nav-link"><span>Resume</span></a></li>
                   <li class="nav-item"><a href="/index.html/#project-section" class="nav-link"><span>Projects</span></a></li>
                   <li class="nav-item"><a href="/index.html/#contact-section" class="nav-link"><span>Contact</span></a></li>
