--- a/Games.html
+++ b/Games.html
@@ -128,9 +128,9 @@
     
                   <li class="nav-item"><a href="index.html#home-section" class="nav-link"><span>Home</span></a></li>
                   <li class="nav-item"><a href="/index.html#about-section" class="nav-link"><span>About</span></a></li>
-                  <li class="nav-item"><a href="/index.html/#resume-section" class="nav-link"><span>Resume</span></a></li>
-                  <li class="nav-item"><a href="/index.html/#project-section" class="nav-link"><span>Projects</span></a></li>
-                  <li class="nav-item"><a href="/index.html/#contact-section" class="nav-link"><span>Contact</span></a></li>
+                  <li class="nav-item"><a href="/index.html#resume-section" class="nav-link"><span>Resume</span></a></li>
+                  <li class="nav-item"><a href="/index.html#project-section" class="nav-link"><span>Projects</span></a></li>
+                  <li class="nav-item"><a href="/index.html#contact-section" class="nav-link"><span>Contact</span></a></li>
                   <li class="nav-item"><a href="/Games.html" class="nav-link"><span>Games</span></a></li>
                 </ul>
               </div>
