--- a/Games.html
+++ b/Games.html
@@ -161,7 +161,7 @@
             </div>
             <div class="col-md-4 d-flex ftco-animate">
                 <div class="blog-entry justify-content-end">
-                <a href="" class="block-20 zoom-effect" style="background-image: url('images/Designer\ \(7\).jpeg');">
+                <a href="https://imsaurav1.github.io/Tic-Tac-Toe/" class="block-20 zoom-effect" style="background-image: url('images/Designer\ \(7\).jpeg');">
                 </a>
                 <div class="text mt-3 float-right d-block">
   
