--- a/index.html
+++ b/index.html
@@ -473,15 +473,15 @@
         </div>
 	<br>
 		<!-- added justify-content-center to center align the last two projects -->
-		<!-- <div class="row d-flex justify-content-center">  
+		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
+				<a href="https://mithilacrafts.netlify.app/" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main">Sales Forecast- Time Series Forecasting</a></h3>
-				  <p>Used multiple machine learning models to forecast sales (retail store) and performed time series analysis.</p>
+				  <h3 class="heading"><a href="https://mithilacrafts.netlify.app/">Mithila Art Gallery</a></h3>
+				  <p>I devloped a shopping site where coustmer can perchuse Mithila Flocks, Painting and other items.</p>
 				</div>
 			  </div>
 			</div>
@@ -496,7 +496,7 @@
 				</div>
 			  </div>
 			</div>
-		 </div> -->
+		 </div>
 	  </div>
     </section>
 
