--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://mithilacrafts.netlify.app/" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
+				<a href="https://mithilacrafts.netlify.app/" class="block-20 zoom-effect" style="background-image: url('images/Designer\ \(15\).jpeg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
@@ -485,7 +485,7 @@
 				</div>
 			  </div>
 			</div>
-			<div class="col-md-4 d-flex ftco-animate">
+<!-- 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
 				<a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
 				</a>
@@ -494,7 +494,7 @@
 				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb">Customer Segmentation using clustering model</a></h3>
 				  <p>Developed a ML model to give various recommendations of financial products &amp; services on target customer groups.</p>
 				</div>
-			  </div>
+			  </div> -->
 			</div>
 		 </div>
 	  </div>
