--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="">Three Phase PWM Inverter</a></h3>
+                <h3 class="heading"><a href="/threephase_inverter.html">Three Phase PWM Inverter</a></h3>
                 <p>Developed a PCB board and assembled the required Components on board. Arduino uses ac the microcontroller
 					and generates 6 pulses for each gate. using the mill’s function provided the PWM pulse in all the different switches.</p>
               </div>
