--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 									  <div class="about-img">
-										<img src="images/gate image saurabh jha.jpg" class="img-fluid rounded b-shadow-a" alt="">
+										<img src="images/photo_for_the_presentation-removebg.png" class="img-fluid rounded b-shadow-a" alt="">
 									  </div>
 									</div>
 									<!-- Details next to profile image -->
