--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
     					<span class="date">2021-Present</span>
     					<h2>Bachelor of Technology</h2>
     					<span class="position">National Institute of Technology, Uttarakhand.</span>
-    					<p class="mt-4">CGPA: 7.</p>
+    					<p class="mt-4">CGPA: 7.10</p>
     				</div>
     			</div>
 
@@ -586,7 +586,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="1714">0</strong>
+                <strong class="number" data-number="1824">0</strong>
                 <span>GFG</span>
               </div>
             </div>
