--- a/sp_interview_exp.html
+++ b/sp_interview_exp.html
@@ -366,6 +366,7 @@
   <script src=" js/aos.js"></script>
   <script src=" js/jquery.animateNumber.min.js"></script>
   <script src=" js/scrollax.min.js"></script>
+  <script src="js/coments.js"></script>
   
   <script src=" js/main.js"></script>
     </body>
