--- a/sp_interview_exp/index.html
+++ b/sp_interview_exp/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Interview Experience for Infosys Specialist Programmer</title>
+   
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+   <title>Infosys Specialist Programmer Interview Experience | Saurabh Jha</title>
+  <meta name="description" content="Detailed Infosys SP interview experience by Saurabh Jha. Includes online test, technical rounds, and HR discussion." />
+  <meta name="author" content="Saurabh Jha" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph for social previews (optional) -->
+  <meta property="og:title" content="Infosys Specialist Programmer Interview Experience" />
+  <meta property="og:description" content="My Infosys SP interview journey, covering all rounds and tips." />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://saurabhjha.site/sp_interview_exp" />
     <link rel="icon" type="image/png" href=" images/logo.png" />
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
