--- a/index.html
+++ b/index.html
@@ -503,6 +503,59 @@
 	  </div>
     </section>
 
+
+	  <section class="ftco-section" id="blogs-section">
+  <div class="container">
+    <div class="row justify-content-center mb-5 pb-5">
+      <div class="col-md-7 heading-section text-center ftco-animate">
+        <h1 class="big big-2">Blogs</h1>
+        <h2 class="mb-4">My Blog Posts</h2>
+        <p>Read some of my latest blog posts and articles below.</p>
+      </div>
+    </div>
+    <div class="row d-flex">
+
+      <!-- Blog Card 1 -->
+      <div class="col-md-4 justify-content-center">
+        <div class="blog-entry justify-content-end">
+          <a href="/blog/posts/build-portfolio.html" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/blog-portfolio.jpg');">
+          </a>
+          <div class="text mt-3 float-right d-block">
+            <h3 class="heading"><a href="/blog/posts/build-portfolio.html" target="_blank">How I Built My Portfolio</a></h3>
+            <p>Step-by-step guide on creating a personal portfolio website using React and GitHub Pages.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Blog Card 2 -->
+      <div class="col-md-4 justify-content-center">
+        <div class="blog-entry justify-content-end">
+          <a href="/blog/posts/deploy-react-netlify.html" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/blog-netlify.jpg');">
+          </a>
+          <div class="text mt-3 float-right d-block">
+            <h3 class="heading"><a href="/blog/posts/deploy-react-netlify.html" target="_blank">Deploying React Apps with Netlify</a></h3>
+            <p>Learn how to deploy React projects seamlessly using Netlify’s hosting platform.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Blog Card 3 -->
+      <div class="col-md-4 justify-content-center">
+        <div class="blog-entry justify-content-end">
+          <a href="/blog/posts/interview-experience.html" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/blog-interview.jpg');">
+          </a>
+          <div class="text mt-3 float-right d-block">
+            <h3 class="heading"><a href="/blog/posts/interview-experience.html" target="_blank">Infosys Interview Experience</a></h3>
+            <p>Detailed walk-through of my Specialist Programmer interview journey at Infosys.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
 <section class="ftco-section" id="project-section">
   <div class="container">
     <div class="row justify-content-center mb-5 pb-5">
