--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
           <a href="/blog/posts/deploy-react-netlify.html" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/blog-netlify.jpg');">
           </a>
           <div class="text mt-3 float-right d-block">
-            <h3 class="heading"><a href="/blog/posts/deploy-react-netlify.html" target="_blank">Deploying React Apps with Netlify</a></h3>
+            <h3 class="heading"><a href="/sp_interview_exp" target="_blank">Deploying React Apps with Netlify</a></h3>
             <p>Learn how to deploy React projects seamlessly using Netlify’s hosting platform.</p>
           </div>
         </div>
