--- a/index.html
+++ b/index.html
@@ -542,10 +542,10 @@
       <!-- Blog Card 3 -->
       <div class="col-md-4 justify-content-center">
         <div class="blog-entry justify-content-end">
-          <a href="/blog/posts/interview-experience.html" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/blog-interview.jpg');">
+          <a href="/sp_interview_exp" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/');">
           </a>
           <div class="text mt-3 float-right d-block">
-            <h3 class="heading"><a href="/blog/posts/interview-experience.html" target="_blank">Infosys Interview Experience</a></h3>
+            <h3 class="heading"><a href="/sp_interview_exp" target="_blank">Infosys Interview Experience</a></h3>
             <p>Detailed walk-through of my Specialist Programmer interview journey at Infosys.</p>
           </div>
         </div>
