--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
       <!-- Blog Card 3 -->
       <div class="col-md-4 justify-content-center">
         <div class="blog-entry justify-content-end">
-          <a href="/sp_interview_exp" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/');">
+          <a href="/sp_interview_exp" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/Infosys-AI-and-analytics-play.png');">
           </a>
           <div class="text mt-3 float-right d-block">
             <h3 class="heading"><a href="/sp_interview_exp" target="_blank">Infosys Interview Experience</a></h3>
