--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 	          <li class="nav-item"><a href="#project-section" class="nav-link"><span>Projects</span></a></li>
+		  <li class="nav-item"><a href="#blogs-section" class="nav-link"><span>Blogs</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 			<li class="nav-item"><a href="/Games" class="nav-link"><span>Games</span></a></li>
 	        </ul>
