--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="/threephase_inverter.html" class="block-20 zoom-effect" style="background-image: url('images/Designer\ \(2\).jpeg');">
+              <a href="/Three_phase_inverter" class="block-20 zoom-effect" style="background-image: url('images/Designer\ \(2\).jpeg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
