--- a/sp_interview_exp/index.html
+++ b/sp_interview_exp/index.html
@@ -181,8 +181,11 @@
 			select our preferred interview location from a list of 10 cities. I chose Noida, so I had to travel there for the interview. </p> <p> My interview was scheduled for 10:00 AM, and I reached the Infosys campus by 9:30 AM. The interview was conducted by a
 				panel of one interviewer. The interview had two sections. </p> <h3> 1st Section: Presentation </h3> <p> In advance, the HR had asked me to prepare a presentation on my ambitions, projects, and resume. I was well-prepared, so I gave a good presentation. It lasted around 10–15 minutes. </p> <h3> 2nd Section: Technical 
 					Interview </h3> <h4> 1st Question: DSA </h4> <p> After the presentation, the interviewer started asking technical questions. He gave me a printed DSA question on a sheet of paper. The question was related to binary search — specifically, to find the closest (or nearest) element in a sorted array. I read the question and quickly figured out the solution. I asked him whether I should write the code or just explain the logic. He said I could explain the solution verbally. I did, and he was satisfied with my answer. </p> <h2><a href="https://www.geeksforgeeks.org/find-closest-number-array/">First Question Link</a></h2>
-			  <h4> 2nd Question: DSA </h4> <p> After the first question, he gave me the second one, which was also related to DSA. The question was to check if there is... </p>
-
+			  <h4> 2nd Question: DSA </h4> 
+			  <p> After the first question, he gave me the second one, which was also related to DSA. The question was: <b>Check if there exists a subsequence with sum K</b>. After reading the question, I realized that it was a dynamic programming problem. I mentioned this to him, and he agreed. He then asked me to write the code for it on paper. </p> 
+                    <p> First, he asked me to show the recursion tree for the solution using an example, which I did. After that, he asked me to write the recursive solution. I wrote the code on paper. Then he asked me to write the optimized solution using memoization, which I did. Finally, he asked me to write the code using tabulation (bottom-up DP). I implemented all three versions, and it took around 40–45 minutes. </p> 
+                    <p> One thing I would like to mention is that my interviewer was very polite and supportive throughout the interview. Even during this question, he gave me some helpful tips, and eventually, I was able to solve it completely. Then we moved on to the third question. </p>
+                    
 
 
 			  
