--- a/sp_interview_exp/index.html
+++ b/sp_interview_exp/index.html
@@ -186,7 +186,7 @@
                     <p> First, he asked me to show the recursion tree for the solution using an example, which I did. After that, he asked me to write the recursive solution. I wrote the code on paper. Then he asked me to write the optimized solution using memoization, which I did. Finally, he asked me to write the code using tabulation (bottom-up DP). I implemented all three versions, and it took around 40–45 minutes. </p> 
                     <p> One thing I would like to mention is that my interviewer was very polite and supportive throughout the interview. Even during this question, he gave me some helpful tips, and eventually, I was able to solve it completely. Then we moved on to the third question. </p>
                     
-
+		   <h2><a href="https://www.geeksforgeeks.org/problems/check-if-there-exists-a-subsequence-with-sum-k/">Second Question Link</a></h2>
 
 			  
                     <p>
