--- a/sp_interview_exp/index.html
+++ b/sp_interview_exp/index.html
@@ -121,6 +121,28 @@
 }
 
 
+
+    table {
+      width: 60%;
+      border-collapse: collapse;
+      margin: 20px 0;
+    }
+    th, td {
+      border: 1px solid #aaa;
+      padding: 8px 12px;
+      text-align: center;
+    }
+    th {
+      background-color: #f2f2f2;
+    }
+    pre {
+      background-color: #f8f8f8;
+      padding: 10px;
+      border-left: 4px solid #ccc;
+      overflow-x: auto;
+    }
+
+
 </style>
 
 
