--- a/sp_interview_exp/index.html
+++ b/sp_interview_exp/index.html
@@ -278,21 +278,27 @@
                             </tr>
                           </tbody>
                         </table>
+
+
+			  <h3>4th Question: System Design</h3>
+<p>
+  After the SQL question, some casual conversation, and a few verbal questions during the interview, the total time had exceeded 1 hour and 15 minutes. Then, the interviewer asked me a system design question to assess my critical thinking skills.
+</p>
+
+<h3><b>The Question was:</b></h3>
+<p><b>You have a system with only 1 GB of RAM, and you are given a 1 TB file of unsorted data. How would you efficiently sort this file using your limited memory?</b></p>
+
+<p>
+  After this question, my interview lasted for around 1 hour and 20 minutes in total, and the interviewer seemed satisfied with my responses. At the end, he asked me if I had any questions for him. I said yes.
+</p>
+
+<p>
+  I asked him, “If I get selected, what will be the next steps, and what should I prepare before joining the company so that it helps me during the training?” He answered my questions and provided some valuable guidance to help me get ready.
+</p>
+
 			  
-                    <p>
-                      I was shortlisted for the Specialist Programmer role at Infosys through campus placements. The process involved an initial online assessment covering Data Structures, Algorithms, and Problem Solving, followed by two technical interviews and one HR round.
-                    </p>
-                    <p>
-                      During the technical interviews, I was asked questions related to core DSA concepts, system design fundamentals, and my past projects. I made sure to clearly explain the logic and real-life use cases of my code. I also highlighted my MERN stack shopping website and how I integrated Razorpay for payments.
-                    </p>
-                    <p>
-                      In the HR round, I was asked about my motivations, future goals, and how I balance academics and projects. I shared my passion for building impactful tech and contributing to global solutions.
-                    </p>
-                    <p>
-                      Finally, I received the offer for the Specialist Programmer role with a CTC of 9.5 LPA. This experience strengthened my confidence and reaffirmed my love for backend and full-stack development.
-                    </p>
-                    <p class="mb-0"><strong>Tips:</strong> Consistent DSA practice, building real projects, and clarity in communication helped me crack the role. Stay confident and keep learning!</p>
-                  </div>
+                   
+		  </div>
                 </div>
               </div>
             </div>
