--- a/sp_interview_exp/index.html
+++ b/sp_interview_exp/index.html
@@ -296,6 +296,14 @@
   I asked him, “If I get selected, what will be the next steps, and what should I prepare before joining the company so that it helps me during the training?” He answered my questions and provided some valuable guidance to help me get ready.
 </p>
 
+			  <p>
+  After the interview, I waited for the results for about a month, and finally, the results were announced on 28-Feb-2025. I was selected for the Infosys Specialist Programmer role. I am very happy and excited to join the company.
+</p>
+
+<p>Thank you for reading!</p>
+<h3><b>Saurabh Kumar Jha</b></h3>
+
+
 			  
                    
 		  </div>
