--- a/sp_interview_exp/index.html
+++ b/sp_interview_exp/index.html
@@ -4,7 +4,7 @@
    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <title>Infosys Specialist Programmer Interview Experience | Saurabh Jha</title>
+   <title>Infosys Specialist Programmer Interview Experience 2025| Saurabh Jha</title>
   <meta name="description" content="Detailed Infosys SP interview experience by Saurabh Jha. Includes online test, technical rounds, and HR discussion." />
   <meta name="author" content="Saurabh Jha" />
   <meta name="robots" content="index, follow" />
@@ -163,6 +163,7 @@
                   <li class="nav-item"><a href=" index.html/#about-section" class="nav-link"><span>About</span></a></li>
                   <li class="nav-item"><a href=" index.html/#resume-section" class="nav-link"><span>Resume</span></a></li>
                   <li class="nav-item"><a href=" index.html/#project-section" class="nav-link"><span>Projects</span></a></li>
+		  <li class="nav-item"><a href="/index.html/#blog-section" class="nav-link"><span>Blog</span></a></li>
                   <li class="nav-item"><a href="/index.html/#contact-section" class="nav-link"><span>Contact</span></a></li>
                   <li class="nav-item"><a href="/Games.html" class="nav-link"><span>Games</span></a></li>
                 </ul>
@@ -183,7 +184,7 @@
               <div class="row d-flex">
                 <div class="col-md-12 ftco-animate">
                   <div class="blog-entry p-4" style="background: #1e262d; border-radius: 10px;">
-                    <h3 class="mb-3">Infosys Specialist Programmer 2025 Interview Experience</h3>
+                    <h3 class="mb-3">Infosys Specialist Programmer 2025 Interview Experience 2025</h3>
 			 <p id="last-updated" style="font-size: 0.9rem; color: #555;"></p>
 			<script>
 			  fetch(window.location.href)
