--- a/sp_interview_exp/index.html
+++ b/sp_interview_exp/index.html
@@ -164,7 +164,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
             <div class="container">
-              <a class="navbar-brand" href="/index.html">SAURABH KUMAR JHA</a>
+              <a class="navbar-brand" href="www.saurabhjha.site">SAURABH KUMAR JHA</a>
               <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span> Menu
               </button>
@@ -172,10 +172,10 @@
               <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav nav ml-auto">
     
-                  <li class="nav-item"><a href="index.html#home-section" class="nav-link"><span>Home</span></a></li>
-                  <li class="nav-item"><a href=" index.html/#about-section" class="nav-link"><span>About</span></a></li>
-                  <li class="nav-item"><a href=" index.html/#resume-section" class="nav-link"><span>Resume</span></a></li>
-                  <li class="nav-item"><a href=" index.html/#project-section" class="nav-link"><span>Projects</span></a></li>
+                  <li class="nav-item"><a href="www.saurabhjha.site#home-section" class="nav-link"><span>Home</span></a></li>
+                  <li class="nav-item"><a href="www.saurabhjha.site#about-section" class="nav-link"><span>About</span></a></li>
+                  <li class="nav-item"><a href="/index.html/#resume-section" class="nav-link"><span>Resume</span></a></li>
+                  <li class="nav-item"><a href="/index.html/#project-section" class="nav-link"><span>Projects</span></a></li>
 		  <li class="nav-item"><a href="/index.html/#blog-section" class="nav-link"><span>Blog</span></a></li>
                   <li class="nav-item"><a href="/index.html/#contact-section" class="nav-link"><span>Contact</span></a></li>
                   <li class="nav-item"><a href="/Games.html" class="nav-link"><span>Games</span></a></li>
