--- a/sp_interview_exp/index.html
+++ b/sp_interview_exp/index.html
@@ -177,7 +177,7 @@
                   <li class="nav-item"><a href="/#resume-section" class="nav-link"><span>Resume</span></a></li>
                   <li class="nav-item"><a href="/#project-section" class="nav-link"><span>Projects</span></a></li>
 		  <li class="nav-item"><a href="/#blog-section" class="nav-link"><span>Blog</span></a></li>
-                  <li class="nav-item"><a href="/index.html/#contact-section" class="nav-link"><span>Contact</span></a></li>
+                  <li class="nav-item"><a href="/index/#contact-section" class="nav-link"><span>Contact</span></a></li>
                   <li class="nav-item"><a href="/Games.html" class="nav-link"><span>Games</span></a></li>
                 </ul>
               </div>
