--- a/sp_interview_exp/index.html
+++ b/sp_interview_exp/index.html
@@ -173,10 +173,10 @@
                 <ul class="navbar-nav nav ml-auto">
     
                   <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
-                  <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
-                  <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
-                  <li class="nav-item"><a href="#project-section" class="nav-link"><span>Projects</span></a></li>
-		  <li class="nav-item"><a href="#blog-section" class="nav-link"><span>Blog</span></a></li>
+                  <li class="nav-item"><a href="/#about-section" class="nav-link"><span>About</span></a></li>
+                  <li class="nav-item"><a href="/#resume-section" class="nav-link"><span>Resume</span></a></li>
+                  <li class="nav-item"><a href="/#project-section" class="nav-link"><span>Projects</span></a></li>
+		  <li class="nav-item"><a href="/#blog-section" class="nav-link"><span>Blog</span></a></li>
                   <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
                   <li class="nav-item"><a href="/Games.html" class="nav-link"><span>Games</span></a></li>
                 </ul>
