--- a/sp_interview_exp/index.html
+++ b/sp_interview_exp/index.html
@@ -522,6 +522,8 @@
   <script src=" js/jquery.animateNumber.min.js"></script>
   <script src=" js/scrollax.min.js"></script>
   <script src="js/coments.js"></script>
+	    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3572576129639558"
+     crossorigin="anonymous"></script>
   
   <script src=" js/main.js"></script>
     </body>
