--- a/index.html
+++ b/index.html
@@ -423,6 +423,38 @@
     				<p><a href="https://drive.google.com/drive/folders/18CaW9TV41PNWUDXl71rtJxrBoOrwcIRD?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
+
+		
+							<div class="col-md-12 mb-5">
+					  <div class="resume-wrap ftco-animate">
+					    <span class="date">24th May 2025</span>
+					    <h2>PDF Document</h2>
+					    <span class="position">Shared on Website</span>
+					    <p class="mt-4">
+					      I recently uploaded this PDF document. You can view it directly below or download it using the button provided.
+					    </p>
+					    
+					    <!-- PDF Viewer -->
+					    <div style="text-align: center; margin-top: 20px;">
+					      <iframe 
+					        src="saurabhjha.pdf" 
+					        height="500" 
+					        width="100%" 
+					        frameborder="0" 
+					        title="Embedded PDF"
+					        style="max-width: 100%;">
+					      </iframe>
+					    </div>
+					
+					    <!-- Download Button -->
+					    <div style="text-align: center; margin-top: 15px;">
+					      <a href="saurabhjha.pdf" download class="btn btn-primary">Download PDF</a>
+					    </div>
+					  </div>
+					</div>
+
+
+		
     	</div>
     </section>
 
