--- a/Games/index.html
+++ b/Games/index.html
@@ -185,6 +185,20 @@
             </div>
             <div class="col-md-4 d-flex ftco-animate">
                 <div class="blog-entry">
+                <a href="https://tic-tac-toe-multiplayer.saurabhjha.site/" class="block-20 zoom-effect" style="background-image: url('images/Designer\ \(8\).jpeg');">
+                </a>
+                <div class="text mt-3 float-right d-block">
+  
+                  <h3 class="heading"><a href="https://tic-tac-toe-multiplayer.saurabhjha.site/"> Tic Tack Toe Multiplayer Game.</a></h3>
+                  <p>This is A most Famous Game that can be Played by Multiplayers at a single Time, Just go Enter Your Name , Search for another Player and Playe</p>
+                </div>
+              </div>
+            </div>
+
+		  
+
+		   <div class="col-md-4 d-flex ftco-animate">
+                <div class="blog-entry">
                 <a href="" class="block-20 zoom-effect" style="background-image: url('images/Designer\ \(9\).jpeg');">
                 </a>
                 <div class="text mt-3 float-right d-block">
@@ -194,6 +208,10 @@
                 </div>
               </div>
             </div>
+
+
+
+		  
           </div>
             <br>
       </div>
@@ -245,3 +263,4 @@
   <script src="js/main.js"></script>
     </body>
 </head>
+
