--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Saurabh Kumar Jha</span></p>
-										<p><span class="title-s">Work: </span> <span>Final Year Student</span></p>
+										<p><span class="title-s">Work: </span> <span>Specialist Programmer @Infosys</span></p>
 										<p><span class="title-s">College: </span> <span>National Institute of Technology, Uttarakhand.</span></p>
 										<p><span class="title-s">Address: </span> <span>Uttarakhand, India</span></p>
 									  </div>
@@ -357,6 +357,28 @@
 		<br>
 		
 		<div class="row">
+
+
+			<div class="col-md-6">
+					<div class="resume-wrap ftco-animate">
+						<span class="date">June 2025 - Present</span>
+						<h2>Specialist Programmer Trainee</h2>
+						<span class="position">Infosys</span>
+						<p class="mt-4">As a Specialist programmer Trainee I am Currently Learning about the Big Data Things and Stacks
+							<ul>
+								<li>I am Enhanching my Knowledge in Python, MongoDb and unix Systems </li>
+								<li>I am working on HDFS Systems and Implementing the Data Analysis on the Azure Data Bases </li>
+								<!-- <li>Designed and executed A/B tests, performed rigorous statistical analysis. Led to 20% MoM increase in the conversion rate.</li> -->
+							</ul>
+						</p>
+					</div>
+
+				</div>
+
+
+
+
+			
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">1st June 2024 - 1st July 2024</span>
@@ -375,7 +397,7 @@
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">August 2023 - Present</span>
+						<span class="date">August 2023 - May 2025</span>
 						<h2>Student Placement Representative, EEE</h2>
 						<span class="position">NIT Uttarakhand</span>
 						<p class="mt-4">Nit Uttarakhandis my college and I am serving as a Placcement Representative of my Batch. 
@@ -401,7 +423,7 @@
 			<div class="row">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2021-Present</span>
+    					<span class="date">2021-2025</span>
     					<h2>Bachelor of Technology</h2>
     					<span class="position">National Institute of Technology, Uttarakhand.</span>
     					<p class="mt-4">CGPA: 7.10</p>
