--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 						<span class="position">NIT Uttarakhand</span>
 						<p class="mt-4">Nit Uttarakhandis my college and I am serving as a Placcement Representative of my Batch. 
 							<ul>
-								<li>As the Student Placement Representative for the Electrical and Electronics Engineering (EEE) department at NIT Uttarakhand, my role involved communicating with HR professionals from various companies to encourage them to participate in our campus placement program. My efforts were focused on enhancing the placement opportunities for my batch.</li>
+								<li>As the Student Placement Representative for the  EEE department at NIT Uttarakhand, My efforts were focused on enhancing the placement opportunities for my batch.</li>
 								
 						    </ul>
 						</p>
