--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 					<div class="resume-wrap ftco-animate">
 						<span class="date">June 2025 - Present</span>
 						<h2>Specialist Programmer Trainee</h2>
-						<span class="position">Infosys</span>
+						<span class="position">Infosys Ltd.</span>
 						<p class="mt-4">As a Specialist programmer Trainee I am Currently Learning about the Big Data Things and Stacks
 							<ul>
 								<li>I am Enhanching my Knowledge in Python, MongoDb and unix Systems </li>
